Ajout d'un hero

--- a/index.html
+++ b/index.html
@@ -15,11 +15,16 @@
     <span>Recherche</span>
  </header>
  <main>
-    <section>
+    <section class="section">
         <div class="box1 box">1</div>
         <div class="box2 box">2</div>
         <div class="box3 box">3</div>
         <div class="box4 box">4</div>
+    </section>
+    <section class="section2">
+        <img src="basket.webp" alt="Basket">
+        <span class="marque">nike</span>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Magni sit ipsam odit illo nam beatae iusto corrupti sed similique explicabo quisquam vel provident necessitatibus, temporibus obcaecati eaque veniam debitis quis.</p>
     </section>
 </main>
 </body>
